force-app/main/default/objects/Process_Review_Checklist_FACT__c/Process_Review_Checklist_FACT__c.object-meta.xml
<CustomObject>
    <label>Process Review Checklist FACT</label>
    <nameField>
        <displayFormat>PRCF-{0000}</displayFormat>
        <label>Process Review Checklist FACT</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Review Checklist FACTs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>