force-app/main/default/objects/Process_Review_Checklist_FACT__c/fields/Checklist_Reviewer_value__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Reviewer_value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checklist Reviewer value</label>
    <type>Checkbox</type>
</CustomField>