force-app/main/default/objects/Process_Review_Checklist_FACT__c/fields/Parent_Task_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Task_Id__c</fullName>
    <label>Parent Task Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>