force-app/main/default/objects/Process_Review_Checklist_FACT__c/fields/Process_Attribute_Review_Detail__c.field-meta.xml
<CustomField>
    <fullName>Process_Attribute_Review_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created This Field to Store the ThreadId Of Reviewer</description>
    <label>Process Attribute Review Detail</label>
    <referenceTo>Process_Attribute_Review_Detail__c</referenceTo>
    <relationshipLabel>Process Review Checklist FACTs</relationshipLabel>
    <relationshipName>Process_Review_Checklist_FACTs</relationshipName>
    <type>Lookup</type>
</CustomField>