force-app/main/default/objects/Process_Review_Checklist_FACT__c/fields/Process_Review_Checklist_Detail__c.field-meta.xml
<CustomField>
    <fullName>Process_Review_Checklist_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process Review Checklist Detail</label>
    <referenceTo>Process_Review_Checklist_Detail__c</referenceTo>
    <relationshipLabel>Process Review Checklist FACTs</relationshipLabel>
    <relationshipName>Process_Review_Checklist_FACTs</relationshipName>
    <type>Lookup</type>
</CustomField>