force-app/main/default/objects/Process_Review_Checklist_FACT__c/fields/Review_For_Related_PPTD__c.field-meta.xml
<CustomField>
    <fullName>Review_For_Related_PPTD__c</fullName>
    <formula>Process_Review_Checklist_Detail__r.Review_For_Related_PPTD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Review For Related PPTD</label>
    <type>Text</type>
</CustomField>