force-app/main/default/objects/Process_Review_Checklist_FACT__c/fields/Review_Related_TaskId__c.field-meta.xml
<CustomField>
    <fullName>Review_Related_TaskId__c</fullName>
    <label>Review Related TaskId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>