force-app/main/default/objects/Process_Review_Checklist_FACT__c/fields/Task_ID__c.field-meta.xml
<CustomField>
    <fullName>Task_ID__c</fullName>
    <label>Task ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>